2015-09-13 (v1.4.1)
  - fix bug where `#attributes` didn't contain default values #107
  - add support for `.find_by` and `#_read_attribute`. Thanks, @andrewfader!

2014-09-03 (v1.4.0)
  - support Rails 4.2 (agraves, al2o3cr)

2014-02-18 (v1.3.0)
  - fix bug where including ActiveHash associations would make `belongs_to :imageable, polymorphic: true` blow up
  - fixed several bugs that prevented active hash from being used without active record / active model
  - add support for splitting up data sources into multiple files (rheaton)
  - add support for storing data in json files (rheaton)

2013-11-29 (v1.2.3)
  - fix bug where active hash would call `.all` on models when setting has_many (grosser)

2013-11-05 (v1.2.2)
  - fix bug in gemspec that made it impossible to use w/ Rails 4

2013-10-24 (v1.2.1)
  - fixed nasty bug in belongs_to that would prevent users from passing procs (thanks for the issue freebird0221)
  - fixed bug where passing in a separate class name to belongs_to_active_hash would raise an exception (mauriciopasquier)

2013-10-01 (v1.2.0)
  - belongs_to is back!
  - added support for primary key options for belongs_to (tomtaylor)

2013-09-09 (v1.0.2)
  - `where(nil)` returns all results, like ActiveRecord (kugaevsky)

2013-07-15 (v1.0.1)
  - Travis CI for ActiveHash + Ruby 2, 1.8.7, Rubinius and JRuby support (mattheworiordan)
  - no longer need to call .all before executing `find_by_*` or `where` methods (mattheworiordan)

2013-06-24 (v1.0.0)
  - save is a no-op on existing records, instead of raising an error (issue #63)

2013-06-24 (v0.10.0)
  - added ActiveYaml::Aliases module so you can DRY up your repetitive yaml (brett-richardson)

2013-05-23 (v0.9.14)
  - enum_accessor can now take multiple field names when generating the constant
  - temporarily disabled rails edge specs since there's an appraisal issue with minitest

2013-01-22
  - Fix find_by_id and find method returning nil unless .all called in ActiveYaml (mattheworiordan)

2012-07-25